{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 496,
  "lineage": "d617caf9-0041-16d0-8f8b-f94e7a693473",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome-bastion-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01204f48ec57eda5d",
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:elastic-ip/eipalloc-01204f48ec57eda5d",
            "association_id": "eipassoc-05dbdfd09b43c4fe0",
            "domain": "vpc",
            "id": "eipalloc-01204f48ec57eda5d",
            "instance": "i-04cb901e153789839",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0287cf42249404e4b",
            "private_dns": "ip-10-250-2-167.ap-northeast-2.compute.internal",
            "private_ip": "10.250.2.167",
            "public_dns": "ec2-15-165-188-145.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.188.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-PRD-NGW-2A-EIP"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2A-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033d1eefb5438d297",
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:elastic-ip/eipalloc-033d1eefb5438d297",
            "domain": "vpc",
            "id": "eipalloc-033d1eefb5438d297",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-102-181.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.102.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SEO-PRD-NGW-2C-EIP"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2C-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:instance/i-04cb901e153789839",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cb901e153789839",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0287cf42249404e4b",
            "private_dns": "ip-10-250-2-167.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.167",
            "public_dns": "ec2-13-124-15-150.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.15.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ed9398c70232c4a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e39d8ed2c928b31",
            "tags": {
              "Name": "awesome-bastion"
            },
            "tags_all": {
              "Name": "awesome-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1320c9471844de0"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-efs-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:instance/i-09daecf4dcd022a8d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09daecf4dcd022a8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c4c7cca859c12e09",
            "private_dns": "ip-10-250-51-60.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.51.60",
            "public_dns": "ec2-3-34-130-182.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.130.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea6d29c308b47cb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0210235447cb81d8a",
            "tags": {
              "Name": "k8s-managed-Server"
            },
            "tags_all": {
              "Name": "k8s-managed-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e35e6b4bc5acd6f"
            ]
          },
          "dependencies": [
            "aws_security_group.efs_security",
            "aws_subnet.pri_sub_c",
            "aws_vpc.vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06087749a704b8168",
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:instance/i-0fb385a9845d30008",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb385a9845d30008",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae9d9b1531b10465",
            "private_dns": "ip-10-250-50-186.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.50.186",
            "public_dns": "ec2-54-180-251-120.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.251.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3dd6b99680e6f61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008051dc0665281d5",
            "tags": {
              "Name": "k8s-managed-Server"
            },
            "tags_all": {
              "Name": "k8s-managed-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b505874a9941ce83"
            ]
          },
          "dependencies": [
            "aws_security_group.private_security",
            "aws_subnet.pri_sub_a",
            "aws_vpc.vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:internet-gateway/igw-03b62a3b8372a9242",
            "id": "igw-03b62a3b8372a9242",
            "owner_id": "767397887596",
            "tags": {
              "Name": "SEO-PRD-IGW"
            },
            "tags_all": {
              "Name": "SEO-PRD-IGW"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "awesome-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033d1eefb5438d297",
            "association_id": "eipassoc-0ec74dc11ebf9492d",
            "connectivity_type": "public",
            "id": "nat-0fdf6c203d4e0fe80",
            "network_interface_id": "eni-0bf90327a30acdbec",
            "private_ip": "10.250.2.104",
            "public_ip": "13.209.102.181",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e39d8ed2c928b31",
            "tags": {
              "Name": "SEO-PRD-NGW-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-NGW-2A"
            }
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev_to_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.250.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aabc5b8560bb71fd3085032262",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aabc5b8560bb71fd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0a54ae397e46cd50b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prod_to_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.240.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0501dc4b83e014f712694500101",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0501dc4b83e014f71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0a54ae397e46cd50b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:route-table/rtb-049e0c488b770262c",
            "id": "rtb-049e0c488b770262c",
            "owner_id": "767397887596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fdf6c203d4e0fe80",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PRI-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:route-table/rtb-043963c9065dd7f2c",
            "id": "rtb-043963c9065dd7f2c",
            "owner_id": "767397887596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fdf6c203d4e0fe80",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PRI-2C"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:route-table/rtb-0970a1c433340ba48",
            "id": "rtb-0970a1c433340ba48",
            "owner_id": "767397887596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b62a3b8372a9242",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SEO-PRD-RT-PUB"
            },
            "tags_all": {
              "Name": "SEO-PRD-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcbc964a0e7ecef8",
            "route_table_id": "rtb-049e0c488b770262c",
            "subnet_id": "subnet-03aa25fb069d5f7c9"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.db_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0643d11de3eafa6af",
            "route_table_id": "rtb-043963c9065dd7f2c",
            "subnet_id": "subnet-02740c8ba9fe6d454"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.db_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4fccf98c44dbed8",
            "route_table_id": "rtb-049e0c488b770262c",
            "subnet_id": "subnet-0ece087874c3cbe9f"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.mgnt_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022efce0e30f2c085",
            "route_table_id": "rtb-043963c9065dd7f2c",
            "subnet_id": "subnet-0e3c9eea2bf883b0b"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.mgnt_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff988aaabd725499",
            "route_table_id": "rtb-049e0c488b770262c",
            "subnet_id": "subnet-0f8ef40c96bf865a2"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.node_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5328f52ff42050",
            "route_table_id": "rtb-043963c9065dd7f2c",
            "subnet_id": "subnet-07d7e8189de970b5b"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.node_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0062475fa61674a93",
            "route_table_id": "rtb-0970a1c433340ba48",
            "subnet_id": "subnet-0e286af6ef69b407b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044fde6b54ee2ca46",
            "route_table_id": "rtb-0970a1c433340ba48",
            "subnet_id": "subnet-06e39d8ed2c928b31"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:security-group/sg-0b1320c9471844de0",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1320c9471844de0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SEO-PRD-VPC-BASTION-PUB-SG-2A",
            "name_prefix": "",
            "owner_id": "767397887596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesome-bastion-sg"
            },
            "tags_all": {
              "Name": "awesome-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:security-group/sg-0c74a64908d38b523",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c74a64908d38b523",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db20240920052207407600000008",
            "name_prefix": "db",
            "owner_id": "767397887596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mysql_db"
            },
            "tags_all": {
              "Name": "allow_mysql_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:security-group/sg-05e35e6b4bc5acd6f",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e35e6b4bc5acd6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "SEO-PRD-VPC-EFS-PUB-SG-2C",
            "name_prefix": "",
            "owner_id": "767397887596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesome-efs-sg"
            },
            "tags_all": {
              "Name": "awesome-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:security-group/sg-084a11cef2da3d3fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084a11cef2da3d3fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "767397887596",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:security-group/sg-069615107e5ee3aba",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069615107e5ee3aba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "767397887596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesome-jenkins-sg"
            },
            "tags_all": {
              "Name": "awesome-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:security-group/sg-0b505874a9941ce83",
            "description": "Allow HTTP,HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b505874a9941ce83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "767397887596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesome-bastion-sg"
            },
            "tags_all": {
              "Name": "awesome-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:security-group/sg-0fdfb8ce5f2562a2d",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdfb8ce5f2562a2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "SEO-PRD-REDIS-SG",
            "name_prefix": "",
            "owner_id": "767397887596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesome-efs-sg"
            },
            "tags_all": {
              "Name": "awesome-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-03aa25fb069d5f7c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa25fb069d5f7c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awesome-db-sub-2a"
            },
            "tags_all": {
              "Name": "awesome-db-sub-2a"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-02740c8ba9fe6d454",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02740c8ba9fe6d454",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awesome-db-sub-2c"
            },
            "tags_all": {
              "Name": "awesome-db-sub-2c"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-0ece087874c3cbe9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ece087874c3cbe9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awesome-mgnt-sub-2a"
            },
            "tags_all": {
              "Name": "awesome-mgnt-sub-2a"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-0e3c9eea2bf883b0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3c9eea2bf883b0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awesome-mgnt-sub-2c"
            },
            "tags_all": {
              "Name": "awesome-mgnt-sub-2c"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-0f8ef40c96bf865a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8ef40c96bf865a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awesome-node-sub-2a"
            },
            "tags_all": {
              "Name": "awesome-node-sub-2a"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-07d7e8189de970b5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d7e8189de970b5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awesome-node-sub-2c"
            },
            "tags_all": {
              "Name": "awesome-node-sub-2c"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-008051dc0665281d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008051dc0665281d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-2A"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-0210235447cb81d8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0210235447cb81d8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PRI-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PRI-2C"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-0e286af6ef69b407b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e286af6ef69b407b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-2A"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-BASTION-PUB-2A"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:subnet/subnet-06e39d8ed2c928b31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e39d8ed2c928b31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397887596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SEO-PRD-VPC-PUB-2C"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC-PUB-2C"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:vpc/vpc-061aee7d376bef06f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.240.0.0/16",
            "default_network_acl_id": "acl-098aeee5ac6320799",
            "default_route_table_id": "rtb-0aabc5b8560bb71fd",
            "default_security_group_id": "sg-0f0b560f0614057ed",
            "dhcp_options_id": "dopt-0449cf03fc6a3aac4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061aee7d376bef06f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aabc5b8560bb71fd",
            "owner_id": "767397887596",
            "tags": {
              "Name": "DEV-VPC"
            },
            "tags_all": {
              "Name": "DEV-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:767397887596:vpc/vpc-04b07863bd587aa52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-0689fbbea723e862e",
            "default_route_table_id": "rtb-0501dc4b83e014f71",
            "default_security_group_id": "sg-03ccb8cac5c94e951",
            "dhcp_options_id": "dopt-0449cf03fc6a3aac4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b07863bd587aa52",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0501dc4b83e014f71",
            "owner_id": "767397887596",
            "tags": {
              "Name": "SEO-PRD-VPC"
            },
            "tags_all": {
              "Name": "SEO-PRD-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0a54ae397e46cd50b",
            "peer_owner_id": "767397887596",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-061aee7d376bef06f",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-Peering"
            },
            "tags_all": {
              "Name": "VPC-Peering"
            },
            "vpc_id": "vpc-04b07863bd587aa52"
          },
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}